--- a/src/app/pages/apps/manageunit/manageunit.component.html
+++ b/src/app/pages/apps/manageunit/manageunit.component.html
@@ -170,7 +170,7 @@
                   </td> -->
                   <td>{{ item.created_on |
                     date:'dd-MM-yyyy HH:mm:ss' }}</td>
-                  <td>{{ item.parent_unit }}</td>
+                  <td>{{ item.parent_group }}</td>
                   <!-- <td>{{ item.parent_unit.split('_')[0].toUpperCase() }}</td> -->
 
                   <td>
