--- a/src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.html
+++ b/src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.html
@@ -1,11 +1,11 @@
-<div class="zoom-controls">
+<!-- <div class="zoom-controls">
     <button (click)="zoomIn()">+</button>
     <button (click)="zoomOut()">-</button>
   </div>
   
   <div class="org-chart-container"  >
    <div   [style.transform]="'scale(' + zoomLevel + ')'">
-  <!-- <p-organizationChart *ngIf="organizationData" [value]="organizationData" #orgChart > -->
+
   
     <p-organizationChart [value]="organizationData" #orgChart selectionMode="single">
 
@@ -36,4 +36,4 @@
         </div>
       </div>
     </ng-template>
-  </p-organizationChart></div></div>
+  </p-organizationChart></div></div> -->
