--- a/src/app/layouts/full/horizontal/header/header.component.html
+++ b/src/app/layouts/full/horizontal/header/header.component.html
@@ -186,7 +186,7 @@
               <h5
                 class="f-s-14 f-w-600 m-0 textprimary mat-subtitle-1 hover-text"
               >
-                {{ profile.title }}
+                <!-- {{ profile.title }} -->
               </h5>
               <span class="mat-body-1">{{ profile.subtitle }}</span>
             </div>
