--- a/src/app/pages/dashboards/dashboard1/alert-content/alert-content.component.html
+++ b/src/app/pages/dashboards/dashboard1/alert-content/alert-content.component.html
@@ -1,6 +1,8 @@
+<!-- <p>alert-content works!</p> -->
+
 <div style=" margin: 2rem;">
 
-    <h1 style="display: flex; justify-content: center;">ClamAv details</h1>
+    <h1 style="display: flex; justify-content: center;">Alert Details</h1>
 
     <!-- <div *ngIf="showTable"> -->
 
@@ -18,17 +20,17 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let clamAv of clamAvData; let i = index">
+                    <tr *ngFor="let log of alertData; let i = index">
                         <td>{{ i + 1 }}</td>
                         <td>
-                            {{clamAv.client_id__client_name}}
+                            {{log.client_name}}
                         </td>
     
                         <td>
-                            {{clamAv.client_id__client_macid}}
+                            {{log.client_macid}}
                         </td>
                         <td>
-                            {{clamAv.client_id__client_publicip}}
+                            {{log.client_publicip}}
                         </td>
                     </tr>
                 </tbody>
@@ -41,3 +43,4 @@
         </button>
     <!-- </div> -->
 </div>
+
