--- a/src/app/pages/dashboards/dashboard1/dashboard1.component.html
+++ b/src/app/pages/dashboards/dashboard1/dashboard1.component.html
@@ -1,20 +1,16 @@
 
 <div class="row" style="justify-content: center;margin: 0;">
-
-
-    <mat-card class="cardWithShadow text-center flex-fill" style="min-width:220px; cursor: pointer;" (click)="regClientCard()">
-      <mat-card-content class="p-24" style="">
+    <mat-card class="cardWithShadow text-center flex-fill" style="min-width: 210px; max-width: 230px; cursor: pointer;" (click)="regClientCard()">
+      <mat-card-content class="p-16" style="">
         <div class="d-flex align-items-center">
           <span
-          class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:5px"
+          class="icon-56 bg-primary text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:4px"
         >
           <mat-icon class="" style="font-size: 45px !important;height: 45px;width: 45px;" >supervised_user_circle</mat-icon>
         </span>
           <div class="m-l-12 text-left" style="width: min-content;">
-            <mat-card-title class=" f-w-500 ">
-              Registered Clients
-             
-             
+            <mat-card-title class=" f-w-400 ">
+              Registered Clients           
             </mat-card-title>
             <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
              <sub style="line-height: 125%;display: flex;
@@ -50,21 +46,21 @@
 
 
 
-    <mat-card class="cardWithShadow text-center flex-fill" style="min-width:220px; cursor: pointer;"(click)="patchCard()">
-      <mat-card-content class="p-24" style="margin: auto;">
+    <mat-card class="cardWithShadow text-center flex-fill" style="min-width:200px; max-width: 230px; cursor: pointer;"(click)="patchCard()">
+      <mat-card-content class="p-16" style="margin: auto;">
         <div class="d-flex align-items-center">
           <span
-            class="icon-56 bg-warning text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:5px"
+            class="icon-56 bg-warning text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:2px"
           >
             <mat-icon style="font-size: 45px !important;height: 45px;width: 45px;">settings</mat-icon>
           </span>
           <div class="m-l-12 text-left">
-            <mat-card-title class=" f-w-500 ">
+            <mat-card-title class=" f-w-400 ">
               Patch &nbsp; <span style="font-size: 18px;font-weight: initial; ">Latest: {{patch_ver}}</span>
              
             </mat-card-title>
             <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
-             <sub style="line-height: 125%;display: flex;
+             <sub style="line-height: 100%;display: flex;
              justify-content: center;"> {{pat_upd_cli}}/{{pat_tol_cli}}  </sub>
              <div>
               <!-- <div class="progress-bar" [style.height.px]="20" style="margin-top: 6px;">
@@ -91,16 +87,16 @@
     </mat-card>
 
     <!-- -----------  -->
-    <mat-card class="cardWithShadow text-center flex-fill" style="min-width:220px; cursor: pointer;" (click)="policyCard()">
-      <mat-card-content class="p-24" style="margin: auto;">
+    <mat-card class="cardWithShadow text-center flex-fill" style="min-width:220px; max-width: 230px; cursor: pointer;" (click)="policyCard()">
+      <mat-card-content class="p-16" style="margin: auto;">
         <div class="d-flex align-items-center">
           <span
-            class="icon-56  text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:5px; background-color: #abed5b !important;"
+            class="icon-56  text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:3px; background-color: #abed5b !important;"
           >
             <mat-icon style="font-size: 45px !important;height: 45px;width: 45px;">assignment_turned_in</mat-icon>
           </span>
           <div class="m-l-12 text-left">
-            <mat-card-title class=" f-w-500 ">
+            <mat-card-title class=" f-w-400 ">
               Policy &nbsp; <span style="font-size: 18px;font-weight: initial; ">Latest:  {{policy_ver}}</span>
              
             </mat-card-title>
@@ -122,7 +118,7 @@
       </mat-card-content>
     </mat-card>
 
-    <mat-card class="cardWithShadow text-center flex-fill" style="min-width:220px; cursor: pointer;"(click)="clamAvCard()">
+    <mat-card class="cardWithShadow text-center flex-fill" style="min-width:220px; max-width: 230px; cursor: pointer;"(click)="clamAvCard()">
       <mat-card-content class="p-24" style="">
         <div class="d-flex align-items-center">
           <span
@@ -138,14 +134,14 @@
               </span> -->
              
             </mat-card-title>
-            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
+            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-12">
              <sub style="line-height: 125%;display: flex;
              justify-content: center;">{{clamAvData?.clam_updated_count}}/{{clamAvData?.total_reg}}  </sub>
              
             </mat-card-subtitle>
           </div>
         </div>
-        <div class="progress-bar" [style.height.px]="20" style="margin-top: 6px;           ">
+        <div class="progress-bar" [style.height.px]="20" style="margin-top: 20px;           ">
           <div [style.width.%]=" clamAvData?.clam_updated_percent " class="progress" 
           [style.place-content]="clamAvData?.clam_updated_percent  <20  ? 'flex-start' : 'center' "
           style="display: flex;
@@ -159,29 +155,63 @@
       </mat-card-content>
     </mat-card>
 
-    <mat-card class="cardWithShadow text-center flex-fill" style="min-width:220px; cursor: pointer;" (click)="logCard()">
-      <mat-card-content class="p-24" style="">
+    <mat-card class="cardWithShadow text-center flex-fill" style="min-width:220px; max-width: 230px; cursor: pointer;" (click)="logCard()">
+      <mat-card-content class="p-16" style="">
         <div class="d-flex align-items-center">
           <span
-          class="icon-56 bg-error text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:5px"
+          class="icon-56 text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:3px;background-color: #D6D46D;"
         >
           <mat-icon style="font-size: 45px !important;height: 45px;width: 45px;">autorenew</mat-icon>
         </span>
           <div class="m-l-12 text-left">
-            <mat-card-title class=" f-w-500 ">
+            <mat-card-title class=" f-w-400 ">
               Log
                <!-- &nbsp; 
               <span style="font-size: 18px;font-weight: initial; ">Latest:  {{logRecievedData?.log_received_count}}</span> -->
              
             </mat-card-title>
-            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
+            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-20">
              <sub style="line-height: 125%;display: flex;
              justify-content: center;">{{logRecievedData?.log_received_count}}/{{logRecievedData?.total_reg}}  </sub>
              
             </mat-card-subtitle>
           </div>
         </div>
-        <div class="progress-bar" [style.height.px]="20" style="margin-top: 6px;">
+        <div class="progress-bar" [style.height.px]="20" style="margin-top: 20px;">
+          <div [style.width.%]=" logRecievedData?.log_received_percent" 
+          class="progress" 
+          [style.place-content]=" logRecievedData?.log_received_percent < 20  ? 'flex-start' : 'center' "
+          style="display: flex;
+         
+          align-content: center;
+          color: white; background-color: #D6D46D"><span style="font-size: 14px;font-weight:bold">{{logRecievedData?.log_received_percent | number:'1.0-0'}}%</span> </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+
+    <mat-card class="cardWithShadow text-center flex-fill" style="min-width:220px; max-width: 230px; cursor: pointer;" (click)="alertCard()">
+      <mat-card-content class="p-24" style="">
+        <div class="d-flex align-items-center">
+          <span
+          class="icon-56 bg-error text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:3px"
+        >
+          <mat-icon style="font-size: 45px !important;height: 45px;width: 45px;">announcement</mat-icon>
+        </span>
+          <div class="m-l-12 text-left">
+            <mat-card-title class=" f-w-400 ">
+              Alerts
+               <!-- &nbsp; 
+              <span style="font-size: 18px;font-weight: initial; ">Latest:  {{logRecievedData?.log_received_count}}</span> -->
+             
+            </mat-card-title>
+            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-18">
+             <sub style="line-height: 125%;display: flex;
+             justify-content: center;">{{alert_count}}  </sub>
+             
+            </mat-card-subtitle>
+          </div>
+        </div>
+        <!-- <div class="progress-bar" [style.height.px]="20" style="margin-top: 6px;">
           <div [style.width.%]=" logRecievedData?.log_received_percent" 
           class="progress" 
           [style.place-content]=" logRecievedData?.log_received_percent < 20  ? 'flex-start' : 'center' "
@@ -189,7 +219,7 @@
          
           align-content: center;
           color: white; background-color: #fc4b6c"><span style="font-size: 14px;font-weight:bold">{{logRecievedData?.log_received_percent | number:'1.0-0'}}%</span> </div>
-        </div>
+        </div> -->
       </mat-card-content>
     </mat-card>
 
