--- a/src/app/pages/dashboards/dashboard1/patch-pop-up/patch-pop-up.component.html
+++ b/src/app/pages/dashboards/dashboard1/patch-pop-up/patch-pop-up.component.html
@@ -13,7 +13,7 @@
                         <th>Name</th>
     
                         <th>Mac ID</th>
-                        <th>Public IP</th>
+                        <th>Client IP</th>
     
                     </tr>
                 </thead>
